<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundal"
    tools:context="com.example.elena.proiectcloud.GraficActivity">

    <TextView
        android:id="@+id/tv_legenda"
        android:textSize="20dp"
        android:textColor="@color/culoare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/tv_legenda" />

    <TextView
        android:id="@+id/tv_axaOX"
        android:textSize="20dp"
        android:textColor="@color/culoare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tv_legendaOX" />

    <TextView
        android:id="@+id/tv_axaOY"
        android:textSize="20dp"
        android:textColor="@color/culoare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tv_legendaOY" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layOut"
        android:layout_marginTop="100dp"
        android:layout_width="340dp"
        android:layout_height="440dp">
    </LinearLayout>

</RelativeLayout>
