<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundal"
    tools:context="com.example.elena.proiectcloud.LogareActivity">

    <TextView
        android:id="@+id/tv_logare"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:fontFamily="Georgia"
        android:gravity="center_horizontal"
        android:text="@string/tv_logare"
        android:textAlignment="center"
        android:textColor="@color/culoare_text"
        android:textSize="40dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="29dp" />

    <TextView
        android:id="@+id/tv_numecont"
        android:fontFamily="Georgia"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/culoare_text"
        android:layout_width="200px"
        android:layout_height="60px"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_logare"
        android:layout_marginStart="27dp"
        android:layout_marginTop="89dp"
        android:text="@string/tv_contnume" />



    <TextView
        android:id="@+id/tv_parola"
        android:layout_width="200px"
        android:layout_height="60px"
        android:layout_alignStart="@+id/tv_numecont"
        android:layout_centerVertical="true"
        android:fontFamily="Georgia"
        android:text="Parola"
        android:textAlignment="center"
        android:textColor="@color/culoare_text"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_numecont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_numecont"
        android:layout_marginEnd="64dp"
        android:text="" />

    <EditText
        android:id="@+id/et_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_numecont"
        android:layout_centerVertical="true"
        android:password="true"
        android:text="" />

    <Button
        android:id="@+id/b_conectare"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_parola"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@color/fundal_buton"
        android:onClick="conectare"
        android:text="@string/b_login" />

    <Button
        android:id="@+id/b_crearecont"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/b_conectare"
        android:layout_below="@+id/b_conectare"
        android:layout_marginTop="33dp"
        android:background="@color/fundal"
        android:textColor="@color/culoare_text"
        android:text="@string/b_crearecont"
        android:onClick="creareCont"
         />

</RelativeLayout>
