<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/fundal"
    tools:context="com.example.elena.proiectcloud.AfiseazaReferintaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:fontFamily="Georgia"
        android:textColor="@color/culoare_text"
        android:text="@string/tv_afisare" />

    <TextView
        android:id="@+id/tv_spatiu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_titluJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/culoare_text"
        android:text="" />

    <TextView
        android:id="@+id/tv_anAp"
        android:textSize="20dp"
        android:textColor="@color/culoare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/tv_tip"
        android:textSize="20dp"
        android:textColor="@color/culoare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/tv_titluD"
        android:textSize="20dp"
        android:textColor="@color/culoare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/tv_spatiu5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_spatiu6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:background="@color/fundal_buton"
        android:text="@string/b_sterge"
        android:onClick="stergere"/>

    <TextView
        android:id="@+id/tv_spatiu7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:background="@color/fundal_buton"
        android:text="@string/b_raport"
        android:onClick="raport"/>
</LinearLayout>
